# deco-social-network-ddd

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2e853ff5aa79_add_posts_table.py  3423912e7e85_added_m2m_assoc_models_pages_followers_.py  4bb12bf77f8b_added_m2m_pages_tages.py  72d08f7c6d63_init.py  76027e79682f_fix_m2m_for_pages_tags.py  870e2bca0d12_added_server_default_and_index_for_.py  afdc7f51febd_add_autogenerating_for_id_uuid_v3.py  d6bdd7750e13_add_autogenerating_for_id_uuid_v2.py  db9885f66647_added_fks_into_pages_tages.py  e94e1355d5ee_add_autogenerating_for_id_uuid.py  f9dce85c169f_added_roll_to_user_model.py
src/application/commands/: __init__.py
src/application/commands/auth/: exceptions.py  use_cases.py
src/application/commands/pages/: use_cases.py
src/application/commands/posts/: use_cases.py
src/application/dtos/: auth.py  page.py  post.py
src/application/queries/: pages.py  posts.py
src/common/: models.py  uow.py
src/config/: db_settings.py
src/domain/auth/: dtos.py  value_objects.py
src/domain/auth/entities/: user.py
src/domain/auth/repositories/: user_repository.py
src/domain/auth/services/: hasher_service.py  jwt_service.py
src/domain/common/: unit_of_work.py  uowed.py
src/domain/pages/entities/: page.py  tag.py
src/domain/pages/repositories/: page_repository.py  tag_repository.py
src/entrypoint/: main.py
src/infrastructure/postgres/: config.py  engine_factory.py  registry.py  tables.py  unit_of_work.py
src/presentation/common/: fastapi_dependencies.py
(+25 files in other folders)
